# vbimage

./: README.md  pyproject.toml
vbimage/: __main__.py  contrast.py  gradient.py  grid.py  layer.py  main.py  pixelate.py  removebg.py  render.py  resize.py
vbimage/temp/: main.tex
