[tool.poetry]
name = "vbimage"
version = "0.1.21"
description = "Replaced replaced command with layer which layers any color on full image where alpha is 255."
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"


[tool.poetry.scripts]
vbimage = "vbimage.main:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
