[tool.poetry]
name = "vbimage"
version = "0.1.42"
description = "Added contrast to increase the contrast of the image"
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"


[tool.poetry.scripts]
vbimage = "vbimage.main:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
